Bug 300323 - nepomukstorage spams .xsession-errors with "FIXME" message
Summary: nepomukstorage spams .xsession-errors with "FIXME" message
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: storage (other bugs)
Version First Reported In: 4.8.90 (beta2)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-19 15:16 UTC by Daniel Schaal
Modified: 2012-07-08 10:29 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
remove kError() statement (922 bytes, text/plain)
2012-05-19 15:18 UTC, Daniel Schaal
Details
.xsession-errors Nepomuk output (36.17 KB, text/plain)
2012-06-15 12:38 UTC, Janek Bevendorff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Schaal 2012-05-19 15:16:30 UTC
After starting KDE the .xsession-errors file gets filled with:

[/usr/bin/nepomukservicestub] nepomukstorage(1064)/nepomuk (storage service): FIXME

messages.

The kError statement responsible for this was added in commit cde602984929a5b6baffd51e6af80256d650420d

Reproducible: Always
Comment 1 Daniel Schaal 2012-05-19 15:18:29 UTC
Created attachment 71221 [details]
remove kError() statement
Comment 2 Jerzy Luszawski 2012-06-10 05:26:29 UTC
 I have the same problem.
Qt: 4.8.1 ; KDE Development Platform: 4.8.3 (4.8.3) ; Kontact: 4.8.3
I cannot figure out - what problem nepomuk has with storage when this message is sent?
Comment 3 David Hubner 2012-06-10 19:44:01 UTC
I also have this error all the time.
Comment 4 David Hubner 2012-06-10 20:17:44 UTC
Looking at the code it looks like this could be stub for ABI compat that was never fixed. 

Nepomuk2::ResourceWatcherManager::addStatement calls addProperty with the wrong arguments for the addProperty method. 

Can someone confirm that this is just a wrapper for a legacy function that was never finished? Should people move away from this legacy method of addStatement? Removing the kError just seems to be avoiding the issue of fixing it properly.
Comment 5 Janek Bevendorff 2012-06-15 12:38:23 UTC
I can confirm these sorts of issues in 4.8.90. My .xsession-errrors file is constantly being spammed with the same message when Nepomuk is running, so that I disabled it to save my hard disks.

The message is the same (except a different PID number, of course):

[/usr/bin/nepomukservicestub] nepomukstorage(30696)/nepomuk (storage service): FIXME

But sometimes, there is also a message

[/usr/bin/nepomukservicestub] nepomukfileindexer(30725)/nepomuk (strigi service): Already running an indexer job on URL KUrl("file:///home/foobar") This is a scheduling bug!

some time after restarting the Nepomuk service. I don't know if this has something to do with the FIXME spam error, if not, let me know and I file another report about it.

My steps to reproduce the issue:
1. Stop/disable Nepomuk in the control panel
2. Remove all Nepomuk storage files and settings from your .kde4 folder to start with a fresh profile (just in case…)
3. Watch your .xsession-errors file with tail -f ~/.xsession-errors
4. Restart Nepomuk

The .xsession-errors file should now report a lot of startup notices and debug output and many messages concerning Soprano. After some time the FIXME messages appear. If they don't, restart Nepomuk again.

Nepomuk version: 4.8.90
Soprano version: 2.7.57
Strigi version: 0.7.7-r1

I have appended my whole .xsession-errors Nepomuk output to this report.
Comment 6 Janek Bevendorff 2012-06-15 12:38:53 UTC
Created attachment 71855 [details]
.xsession-errors Nepomuk output
Comment 7 Vishesh Handa 2012-06-15 13:10:19 UTC
Git commit d9234cca36319cb6895d4a7d36030a95923d1373 by Vishesh Handa.
Committed on 15/06/2012 at 15:07.
Pushed by vhanda into branch 'master'.

Remove a FIXME debug message

It's not a good idea to spam the users with FIXME errors.

M  +0    -1    services/storage/resourcewatchermanager.cpp

http://commits.kde.org/nepomuk-core/d9234cca36319cb6895d4a7d36030a95923d1373
Comment 8 Pino Toscano 2012-07-08 10:29:56 UTC
Git commit 41220dcd2f2cceb26919eb7dab31481a1c9979ec by Pino Toscano, on behalf of Vishesh Handa.
Committed on 15/06/2012 at 15:07.
Pushed by pino into branch 'KDE/4.8'.

Remove a FIXME debug message

It's not a good idea to spam the users with FIXME errors.

M  +0    -1    nepomuk/services/storage/resourcewatchermanager.cpp

http://commits.kde.org/kde-runtime/41220dcd2f2cceb26919eb7dab31481a1c9979ec