Remove a FIXME debug message

It's not a good idea to spam the users with FIXME errors.

BUG: 300323